--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: java
 
 jdk:
     - openjdk8
+    
+addons:
+    sonarcloud:
+        organization: "gabrielequatrana"
+        token: "19ffc48e2289ebec400b39caff8340d3cdb15749"
 
 script:
     - mvn compile
