--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,4 @@ script:
     - mvn compile
     - mvn test
     - mvn package
+    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=gabrielequatrana_test-jcs-1.3
