--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,10 @@ addons:
         token: "19ffc48e2289ebec400b39caff8340d3cdb15749"
 
 script:
+    - ls -l
     - mvn compile
+    - cd config
     - mvn test
     - mvn package
     - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=gabrielequatrana_test-jcs-1.3
+    
