--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="lutz"/>
+	<classpathentry kind="src" path="test-conf"/>
 	<classpathentry kind="src" path="config"/>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
