--- a/pom.xml
+++ b/pom.xml
@@ -83,5 +83,16 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    
+    <resources>
+    	<resource>
+    		<directory>
+    			test-conf
+    		</directory>
+    		<includes>
+    			<include>**/*.ccf</include>
+    		</includes>
+    	</resource>
+    </resources>
   </build>
 </project>
