--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,13 @@ addons:
     sonarcloud:
         organization: "gabrielequatrana"
         token: "19ffc48e2289ebec400b39caff8340d3cdb15749"
+        
+notifications:
+    email:
+        on_success: never
+        on_failure: never
 
 script:
-    - ls -l
     - mvn compile
     - mvn test
     - mvn package
