--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ script:
     - mvn compile
     - mvn test
     - mvn package
-    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=gabrielequatrana_test-jcs-1.3
+    - mvn clean verify sonar:sonar
     
