--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com</groupId>
-  <artifactId>jcs</artifactId>
+  <artifactId>isw2</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
-  <name>jcs</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <name>ISW2</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
