--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,8 @@
 	<build>
 
 		<testSourceDirectory>src/test/</testSourceDirectory>
+		
+		<sourceDirectory>src/test-conf</sourceDirectory>
 
 		<pluginManagement>
 			<plugins>
