--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
 
 		<pluginManagement>
 			<plugins>
+			
+				<plugin>
+					<groupId>org.sonarsource.scanner.maven</groupId>
+					<artifactId>sonar-maven-plugin</artifactId>
+					<version>3.6.0.1398</version>
+				</plugin>
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
