--- a/pom.xml
+++ b/pom.xml
@@ -46,28 +46,34 @@
 			<artifactId>jta</artifactId>
 			<version>1.1</version>
 		</dependency>
-		
+
 		<dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.12</version>
-        </dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.12</version>
+		</dependency>
 
 	</dependencies>
 
 	<build>
 
 		<testSourceDirectory>src/test/</testSourceDirectory>
-		
+
 		<sourceDirectory>src/test-conf</sourceDirectory>
 
 		<pluginManagement>
 			<plugins>
-			
+
 				<plugin>
 					<groupId>org.sonarsource.scanner.maven</groupId>
 					<artifactId>sonar-maven-plugin</artifactId>
-					<version>3.6.0.1398</version>
+					<version>3.7.0.1746</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>0.8.6</version>
 				</plugin>
 
 				<plugin>
@@ -81,7 +87,7 @@
 							<version>2.22.0</version>
 						</dependency>
 					</dependencies>
-					
+
 					<configuration>
 						<includes>
 							<include>**/*.java</include>
@@ -91,7 +97,7 @@
 
 			</plugins>
 		</pluginManagement>
-		
+
 		<!-- Test configs -->
 		<resources>
 			<resource>
