--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		
-		  <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+
+		<sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 
 	<dependencies>
@@ -61,45 +61,48 @@
 
 		<testSourceDirectory>src/test/</testSourceDirectory>
 
-		<sourceDirectory>src/test-conf</sourceDirectory>
-
-		<pluginManagement>
-			<plugins>
-
-				<plugin>
-					<groupId>org.sonarsource.scanner.maven</groupId>
-					<artifactId>sonar-maven-plugin</artifactId>
-					<version>3.7.0.1746</version>
-				</plugin>
-
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.22.0</version>
-					<dependencies>
-						<dependency>
-							<groupId>org.apache.maven.surefire</groupId>
-							<artifactId>surefire-junit4</artifactId>
-							<version>2.22.0</version>
-						</dependency>
-					</dependencies>
-
-					<configuration>
-						<includes>
-							<include>**/*.java</include>
-						</includes>
-					</configuration>
-				</plugin>
-
-			</plugins>
-		</pluginManagement>
-
 		<plugins>
+
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.7.0.1746</version>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.0</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.surefire</groupId>
+						<artifactId>surefire-junit4</artifactId>
+						<version>2.22.0</version>
+					</dependency>
+				</dependencies>
+
+				<configuration>
+					<includes>
+						<include>**/*.java</include>
+					</includes>
+				</configuration>
+			</plugin>
+
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.6</version>
+				<version>0.8.7</version>
 				<executions>
+					<execution>
+						<id>default-instrument</id>
+						<phase>test</phase>
+						<goals>
+							<goal>instrument</goal>
+						</goals>
+						<configuration>
+							<include>/resource/jcs-1.3.jar</include>
+						</configuration>
+					</execution>
 					<execution>
 						<id>prepare-agent</id>
 						<goals>
@@ -115,12 +118,13 @@
 					</execution>
 				</executions>
 			</plugin>
+			
 		</plugins>
 
 		<!-- Test configs -->
 		<resources>
 			<resource>
-				<directory>src/test-conf</directory>
+				<directory>test-conf</directory>
 				<includes>
 					<include>**/*.properties</include>
 					<include>**/*.ccf</include>
