--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,6 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-
-		<sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 
 	<dependencies>
@@ -60,66 +58,36 @@
 	<build>
 
 		<testSourceDirectory>src/test/</testSourceDirectory>
+		
+		<pluginManagement>
+			<plugins>
 
-		<plugins>
+				<plugin>
+					<groupId>org.sonarsource.scanner.maven</groupId>
+					<artifactId>sonar-maven-plugin</artifactId>
+					<version>3.7.0.1746</version>
+				</plugin>
 
-			<plugin>
-				<groupId>org.sonarsource.scanner.maven</groupId>
-				<artifactId>sonar-maven-plugin</artifactId>
-				<version>3.7.0.1746</version>
-			</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.22.0</version>
+					<dependencies>
+						<dependency>
+							<groupId>org.apache.maven.surefire</groupId>
+							<artifactId>surefire-junit4</artifactId>
+							<version>2.22.0</version>
+						</dependency>
+					</dependencies>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.0</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.surefire</groupId>
-						<artifactId>surefire-junit4</artifactId>
-						<version>2.22.0</version>
-					</dependency>
-				</dependencies>
-
-				<configuration>
-					<includes>
-						<include>**/*.java</include>
-					</includes>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.7</version>
-				<executions>
-					<execution>
-						<id>default-instrument</id>
-						<phase>test</phase>
-						<goals>
-							<goal>instrument</goal>
-						</goals>
-						<configuration>
-							<include>/resource/jcs-1.3.jar</include>
-						</configuration>
-					</execution>
-					<execution>
-						<id>prepare-agent</id>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>report</id>
-						<phase>test</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			
-		</plugins>
+					<configuration>
+						<includes>
+							<include>**/*.java</include>
+						</includes>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 
 		<!-- Test configs -->
 		<resources>
@@ -133,5 +101,56 @@
 		</resources>
 
 	</build>
+	
+	<profiles>
+	    <profile>
+	      <id>coverage</id>
+	      <activation>
+		<activeByDefault>true</activeByDefault>
+	      </activation>
+	      <build>
+		<plugins>
+		  <plugin>
+		    <groupId>org.jacoco</groupId>
+		    <artifactId>jacoco-maven-plugin</artifactId>
+		    <version>0.8.6</version>
+		    <executions>
+		      <execution>
+			<id>prepare-agent</id>
+			<goals>
+			  <goal>prepare-agent</goal>
+			</goals>
+		      </execution>
+		      <execution>
+			<id>report</id>
+			<goals>
+			  <goal>report</goal>
+			</goals>
+		      </execution>
+		    </executions>
+		  </plugin>
+		</plugins>
+	      </build>
+	    </profile>
+	    <profile>
+	       <id>sonar</id>
+			<activation>
+			<activeByDefault>true</activeByDefault>
+		    </activation>
+			<properties>
+			<sonar.host.url>http://sonarcloud.io</sonar.host.url>
+					<sonar.organization>gabrielequatrana</sonar.organization>
+					<sonar.projectKey>gabrielequatrana_JCSTest</sonar.projectKey>
+					<sonar.projectName>JCSTest</sonar.projectName>
+					<sonar.login>e92d1736b6886961bf4802e224ebdb762f6c2e50</sonar.login>
+					<sonar.src>src</sonar.src>
+					<sonar.language>java</sonar.language>
+					<sonar.java.src>14</sonar.java.src>
+					<sonar.verbose>true</sonar.verbose>
+					<!-- import JaCoCo report to SonarCloud-->
+				<sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+				</properties>
+	    </profile>
+	  </profiles>
 
 </project>
