--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<packaging>jar</packaging>
 
 	<name>JCSTest</name>
+	<url>http://maven.apache.org</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -48,6 +49,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.maven.surefire</groupId>
+			<artifactId>surefire-junit4</artifactId>
+			<version>2.22.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.12</version>
@@ -58,7 +65,9 @@
 	<build>
 
 		<testSourceDirectory>src/test/</testSourceDirectory>
-		
+
+		<sourceDirectory>src/test-conf</sourceDirectory>
+
 		<pluginManagement>
 			<plugins>
 
@@ -79,78 +88,70 @@
 							<version>2.22.0</version>
 						</dependency>
 					</dependencies>
-
 					<configuration>
 						<includes>
 							<include>**/*.java</include>
 						</includes>
 					</configuration>
 				</plugin>
+
 			</plugins>
 		</pluginManagement>
 
-		<!-- Test configs -->
-		<resources>
-			<resource>
-				<directory>test-conf</directory>
-				<includes>
-					<include>**/*.properties</include>
-					<include>**/*.ccf</include>
-				</includes>
-			</resource>
-		</resources>
-
 	</build>
-	
+
 	<profiles>
-	    <profile>
-	      <id>coverage</id>
-	      <activation>
-		<activeByDefault>true</activeByDefault>
-	      </activation>
-	      <build>
-		<plugins>
-		  <plugin>
-		    <groupId>org.jacoco</groupId>
-		    <artifactId>jacoco-maven-plugin</artifactId>
-		    <version>0.8.6</version>
-		    <executions>
-		      <execution>
-			<id>prepare-agent</id>
-			<goals>
-			  <goal>prepare-agent</goal>
-			</goals>
-		      </execution>
-		      <execution>
-			<id>report</id>
-			<goals>
-			  <goal>report</goal>
-			</goals>
-		      </execution>
-		    </executions>
-		  </plugin>
-		</plugins>
-	      </build>
-	    </profile>
-	    <profile>
-	       <id>sonar</id>
+
+		<profile>
+			<id>coverage</id>
 			<activation>
-			<activeByDefault>true</activeByDefault>
-		    </activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<version>0.8.6</version>
+						<executions>
+							<execution>
+								<id>prepare-agent</id>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>report</id>
+								<goals>
+									<goal>report</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>sonar</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<properties>
-			<sonar.host.url>http://sonarcloud.io</sonar.host.url>
-					<sonar.organization>gabrielequatrana</sonar.organization>
-					<sonar.projectKey>gabrielequatrana_JCSTest</sonar.projectKey>
-					<sonar.projectName>JCSTest</sonar.projectName>
-					<sonar.login>923e5e837e9fe5d4174e770f5dfca1e808404f7b</sonar.login>
-					<sonar.src>src</sonar.src>
-					<sonar.language>java</sonar.language>
-					<sonar.java.src>14</sonar.java.src>
-					<sonar.verbose>true</sonar.verbose>
-					<!-- import JaCoCo report to SonarCloud-->
+				<sonar.host.url>http://sonarcloud.io</sonar.host.url>
+				<sonar.organization>gabrielequatrana</sonar.organization>
+				<sonar.projectKey>gabrielequatrana_JCSTest</sonar.projectKey>
+				<sonar.projectName>JCSTest</sonar.projectName>
+				<sonar.login>923e5e837e9fe5d4174e770f5dfca1e808404f7b</sonar.login>
+				<sonar.src>src</sonar.src>
+				<sonar.language>java</sonar.language>
+				<sonar.java.src>14</sonar.java.src>
+				<sonar.verbose>true</sonar.verbose>
+				<!-- import JaCoCo report to SonarCloud -->
 				<sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
-				</properties>
-	    </profile>
-	  </profiles>
+			</properties>
+		</profile>
+
+	</profiles>
 
 </project>
