--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
 							</execution>
 							<execution>
 								<id>report</id>
+								<phase>test</phase>
 								<goals>
 									<goal>report</goal>
 								</goals>
