--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 
 		<testSourceDirectory>src/test/</testSourceDirectory>
 
-		<sourceDirectory>src/test-conf</sourceDirectory>
+		<sourceDirectory>src/test/resources</sourceDirectory>
 
 		<pluginManagement>
 			<plugins>
