--- a/pom.xml
+++ b/pom.xml
@@ -49,12 +49,6 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.maven.surefire</groupId>
-			<artifactId>surefire-junit4</artifactId>
-			<version>2.22.0</version>
-		</dependency>
-
-		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.12</version>
@@ -133,7 +127,7 @@
 			</build>
 		</profile>
 
-		<profile>
+		<!--  <profile>
 			<id>sonar</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
@@ -151,10 +145,9 @@
 				<sonar.language>java</sonar.language>
 				<sonar.java.src>14</sonar.java.src>
 				<sonar.verbose>true</sonar.verbose>
-				<!-- import JaCoCo report to SonarCloud -->
 				<sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 			</properties>
-		</profile>
+		</profile> -->
 
 	</profiles>
 
