--- a/pom.xml
+++ b/pom.xml
@@ -140,11 +140,10 @@
 				<sonar.links.scm>https://github.com/gabrielequatrana/JCSTest</sonar.links.scm>
 				<sonar.links.issue>https://github.com/gabrielequatrana/JCSTest/issues</sonar.links.issue>
 				<sonar.login>923e5e837e9fe5d4174e770f5dfca1e808404f7b</sonar.login>
-				<sonar.sources>src</sonar.sources>
 				<sonar.language>java</sonar.language>
 				<sonar.java.src>14</sonar.java.src>
 				<sonar.verbose>true</sonar.verbose>
-				<sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+				<sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 			</properties>
 		</profile>
 
