--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 
 	<build>
 
-		<testSourceDirectory>src/test/</testSourceDirectory>
+		<testSourceDirectory>src/test/java</testSourceDirectory>
 
 		<pluginManagement>
 			<plugins>
