--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
 					<configuration>
 						<includes>
 							<include>**/*.java</include>
+							<runOrder>alphabetical</runOrder>
 						</includes>
 					</configuration>
 				</plugin>
