--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ addons:
 script:
     - mvn clean verify -P coverageProfile
     - mkdir -p target/site/
-    - java -jar lib/jacococli.jar report target/jacoco.exec --classfiles lib/jcs-1.3.jar --sourcefiles lib/jcs-1.3/ --html target/jacoco-gen/jcs-coverage/ --xml target/jacoco-gen/jcs-coverage/file.xml --csv target/jacoco-gen/jcs-coverage/file.csv
+    - java -jar lib/jacococli.jar report target/jacoco.exec --classfiles lib/jcs-1.3.jar --sourcefiles lib/jcs-1.3/ --html target/site/ --xml target/site/file.xml --csv target/site/file.csv
     # - mvn clean verify sonar:sonar
