--- a/pom.xml
+++ b/pom.xml
@@ -60,11 +60,17 @@
 	</dependencies>
 
 	<build>
-		
+
 		<testSourceDirectory>src/test</testSourceDirectory>
 
 		<pluginManagement>
 			<plugins>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.8.1</version>
+				</plugin>
 
 				<plugin>
 					<groupId>org.sonarsource.scanner.maven</groupId>
@@ -75,12 +81,12 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.22.0</version>
+					<version>${surefire.version}</version>
 					<dependencies>
 						<dependency>
 							<groupId>org.apache.maven.surefire</groupId>
 							<artifactId>surefire-junit4</artifactId>
-							<version>2.22.0</version>
+							<version>${surefire.version}</version>
 						</dependency>
 					</dependencies>
 					<configuration>
@@ -97,14 +103,14 @@
 	</build>
 
 	<profiles>
-	
+
 		<profile>
-		
+
 			<id>coverageProfile</id>
 			<activation>
 				<activeByDefault>false</activeByDefault>
 			</activation>
-			
+
 			<dependencies>
 				<dependency>
 					<groupId>org.apache.jcs</groupId>
@@ -113,19 +119,19 @@
 					<scope>system</scope>
 					<systemPath>${jcs.fat}</systemPath>
 				</dependency>
-				
+
 				<dependency>
 					<groupId>commons-logging</groupId>
 					<artifactId>commons-logging</artifactId>
 					<version>1.1.2</version>
 				</dependency>
-				
+
 				<dependency>
 					<groupId>concurrent</groupId>
 					<artifactId>concurrent</artifactId>
 					<version>1.0</version>
 				</dependency>
-				
+
 				<dependency>
 					<groupId>org.jacoco</groupId>
 					<artifactId>org.jacoco.agent</artifactId>
@@ -133,10 +139,10 @@
 					<version>${jacoco.version}</version>
 				</dependency>
 			</dependencies>
-			
+
 			<build>
 				<plugins>
-				
+
 					<plugin>
 						<groupId>org.jacoco</groupId>
 						<artifactId>jacoco-maven-plugin</artifactId>
@@ -153,7 +159,7 @@
 							</execution>
 						</executions>
 					</plugin>
-					
+
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
@@ -171,10 +177,10 @@
 							<useUnlimitedThreads>true</useUnlimitedThreads>
 						</configuration>
 					</plugin>
-					
+
 				</plugins>
 			</build>
-			
+
 		</profile>
 
 	</profiles>
