--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,4 @@ script:
     - mkdir -p target/site/
     - java -jar lib/jacococli.jar report target/jacoco.exec --classfiles lib/jcs-1.3.jar --sourcefiles lib/jcs-1.3/ --html target/site/ --xml target/site/file.xml --csv target/site/file.csv
     - mvn verify sonar:sonar
+    - ls target/site/
