--- a/pom.xml
+++ b/pom.xml
@@ -199,7 +199,7 @@
 				<sonar.java.file.suffixes>.java</sonar.java.file.suffixes>
 				<sonar.tests>${project.build.testSourceDirectory}</sonar.tests>
 				<sonar.verbose>true</sonar.verbose>
-				<sonar.coverage.jacoco.xmlReportPaths>${basedir}/target/site/file.xml</sonar.coverage.jacoco.xmlReportPaths>
+				<sonar.coverage.jacoco.xmlReportPaths>/target/site/file.xml</sonar.coverage.jacoco.xmlReportPaths>
 			</properties>
 		</profile>
 
