--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,18 @@
 		<surefire.version>2.22.2</surefire.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		
 		<jcs.fat>${basedir}/lib/jcs-1.3-fat.jar</jcs.fat>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.organization>gabrielequatrana</sonar.organization>
+		<sonar.projectName>JCSTest</sonar.projectName>
+		<sonar.login>923e5e837e9fe5d4174e770f5dfca1e808404f7b</sonar.login>
+		<sonar.language>java</sonar.language>
+		<sonar.java.source>1.8</sonar.java.source>
+		<sonar.java.file.suffixes>.java</sonar.java.file.suffixes>
+		<sonar.verbose>true</sonar.verbose>
+		<sonar.coverage.jacoco.xmlReportPaths>/target/site/file.xml</sonar.coverage.jacoco.xmlReportPaths>
+		<redirectTestOutputToFile>true</redirectTestOutputToFile>
 	</properties>
 
 	<dependencies>
@@ -189,17 +200,6 @@
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<properties>
-				<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-				<sonar.organization>gabrielequatrana</sonar.organization>
-				<sonar.projectKey>gabrielequatrana_JCSTest</sonar.projectKey>
-				<sonar.projectName>JCSTest</sonar.projectName>
-				<sonar.login>d4fd9b2722fccf41152cb17fe25fd15e644b7c88</sonar.login>
-				<sonar.language>java</sonar.language>
-				<sonar.java.source>14</sonar.java.source>
-				<sonar.java.file.suffixes>.java</sonar.java.file.suffixes>
-				<sonar.tests>${project.build.testSourceDirectory}</sonar.tests>
-				<sonar.verbose>true</sonar.verbose>
-				<sonar.coverage.jacoco.xmlReportPaths>/target/site/file.xml</sonar.coverage.jacoco.xmlReportPaths>
 			</properties>
 		</profile>
 
