--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
 			<artifactId>jcs</artifactId>
 			<version>1.3</version>
 
-			<!-- Remove bug of jdbc-sdtext error -->
+			<!-- Remove jdbc-sdtext error -->
 			<exclusions>
 				<exclusion>
 					<artifactId>jdbc-stdext</artifactId>
@@ -104,7 +104,6 @@
 						<includes>
 							<include>**/*.java</include>
 						</includes>
-						<runOrder>alphabetical</runOrder>
 					</configuration>
 				</plugin>
 
@@ -192,15 +191,6 @@
 				</plugins>
 			</build>
 
-		</profile>
-
-		<profile>
-			<id>sonar</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<properties>
-			</properties>
 		</profile>
 
 	</profiles>
