--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<surefire.version>2.22.2</surefire.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		
+
 		<jcs.fat>${basedir}/lib/jcs-1.3-fat.jar</jcs.fat>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.organization>gabrielequatrana</sonar.organization>
@@ -110,6 +110,27 @@
 			</plugins>
 		</pluginManagement>
 
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>3.0.0</version>
+				<executions>
+					<execution>
+						<id>Jacoco script</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>bash</executable>
+							<commandlineArgs>ls -l</commandlineArgs>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+		
 	</build>
 
 	<profiles>
