--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,7 @@
 						</goals>
 						<configuration>
 							<executable>bash</executable>
-							<commandlineArgs>ls -l</commandlineArgs>
+							<commandlineArgs>${basedir}/jacoco.sh</commandlineArgs>
 						</configuration>
 					</execution>
 				</executions>
