--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,4 @@ addons:
     token: "923e5e837e9fe5d4174e770f5dfca1e808404f7b" 
 
 script:
-    - mvn clean verify -P coverageProfile
-    - mkdir -p target/site/
-    - java -jar lib/jacococli.jar report target/jacoco.exec --classfiles lib/jcs-1.3.jar --sourcefiles lib/jcs-1.3/ --html target/site/ --xml target/site/file.xml --csv target/site/file.csv
-    - ls target/site/
-    - mvn org.jacoco:jacoco-maven-plugin:prepare-agent org.jacoco:jacoco-maven-plugin:report validate sonar:sonar
+    - mvn clean -P coverageProfile org.jacoco:jacoco-maven-plugin:prepare-agent org.jacoco:jacoco-maven-plugin:report verify sonar:sonar
