--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ addons:
     token: "923e5e837e9fe5d4174e770f5dfca1e808404f7b" 
 
 script:
-    - mvn clean -P coverageProfile org.jacoco:jacoco-maven-plugin:prepare-agent org.jacoco:jacoco-maven-plugin:report verify sonar:sonar
+    - mvn clean -P coverageProfile verify sonar:sonar
     - ls -l target/jacoco-gen/jcs-coverage/
