--- a/pom.xml
+++ b/pom.xml
@@ -156,7 +156,7 @@
 								OF jcs ARE NEEDED: -->
 							<!-- GENERATE THE REPORTS OFFLINE AS DESCRIBED IN jacocolibSnippets.txt -->
 							<execution>
-								<id>TheExecutionId</id>
+								<id>prepare-agent</id>
 								<goals>
 									<goal>prepare-agent</goal>
 								</goals>
@@ -199,12 +199,6 @@
 								</configuration>
 							</execution>
 						</executions>
-					</plugin>
-
-					<plugin>
-						<groupId>org.sonarsource.scanner.maven</groupId>
-						<artifactId>sonar-maven-plugin</artifactId>
-						<version>3.7.0.1746</version>
 					</plugin>
 
 				</plugins>
