--- a/pom.xml
+++ b/pom.xml
@@ -195,7 +195,7 @@
 								</goals>
 								<configuration>
 									<executable>bash</executable>
-									<commandlineArgs>${basedir}\jacoco.sh</commandlineArgs>
+									<commandlineArgs>${basedir}/jacoco.sh</commandlineArgs>
 								</configuration>
 							</execution>
 						</executions>
