--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ addons:
     token: "923e5e837e9fe5d4174e770f5dfca1e808404f7b" 
 
 script:
-    - mvn clean verify -P coverageProfile sonar:sonar
+    - mvn clean verify
