--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,7 @@
 							</execution>
 						</executions>
 						<configuration>
+							<runOrder>alphabetical</runOrder>
 							<reuseForks>false</reuseForks>
 							<useUnlimitedThreads>true</useUnlimitedThreads>
 						</configuration>
